--- a/trunk/mime-types/ChangeLog
+++ b/trunk/mime-types/ChangeLog
@@ -1,7 +1,12 @@
-Revision history for Ruby extension MIME::Types.
+= MIME::Types Change Log
 
 Unless explicitly stated differently are all changes produced by Austin
 Ziegler <mime-types@halostatue.ca>.
+
+== MIME::Types 1.15
+* Re-synchronized the MIME type list with the sources, focusing primarily on
+  the IANA list.
+* Re-synchronized with the Perl implementation.
 
 == MIME::Types 1.13.1
 * Fixed a problem with the installer running tests. This now works.
@@ -75,3 +80,13 @@ Ziegler <mime-types@halostatue.ca>.
 
 == MIME::Types 1.003
 * Initial release based on Perl MIME::Types 1.003.
+
+#--
+# MIME::Types for Ruby
+#   http://rubyforge.org/projects/mime-types/
+#   Copyright 2003 - 2005 Austin Ziegler.
+#   Licensed under a MIT-style licence.
+#
+# $Id$
+#++
+# vim: sts=2 sw=2 ts=4 et ai tw=77
