--- a/trunk/mime-types/Readme
+++ b/trunk/mime-types/Readme
@@ -1,18 +1,23 @@
-Mime::Types README
+= README: Mime::Types for Ruby
+This library allows for the identification of a file's likely MIME content
+type. This is release 1.15. The identification of MIME content type is based
+on a file's filename extensions.
 
-This is release 1.13.1 of MIME::Types for Ruby, based on the Perl package of the
-same name. It is generally kept in sync with the Perl version of MIME::Types.
+MIME::Types for Ruby originally based on and synchronized with MIME::Types
+for Perl by Mark Overmeer, copyright 2001 - 2005. As of version 1.15, the
+data format for the MIME::Type list has changed and the synchronization will
+no longer happen.
 
-This package works on the same concept as mailcap, which uses filename
-extensions to determine the file's likely MIME content type. This package does
-not analyse files for magic bytes to determine the appropriate actual MIME
-content type.
+Homepage::  http://mime-types.rubyforge.org/
+Copyright:: 2002 - 2006, Austin Ziegler
+            Based on prior work copyright Mark Overmeer
 
-Copyright © 2002 - 2004 Austin Ziegler
-Based on prior work copyright © Mark Overmeer
+== Licensing
+MIME::Types is available under three disjunctive licences, as detailed in the
+LICENCE file.
 
-This package is licensed under Ruby's licence, the Perl Artistic licence, or
-the GPL version 2 or later.
+== Requirements
+MIME::Types requires Ruby 1.8.2 or better.
 
 #--
 # MIME::Types for Ruby
