--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,9 @@
+== MIME::Types 1.17 / 2011-MM-DD
+* Implemented modern 'hoe' semantics.
+* Switched to minitest instead of test/unit.
+* Converted documentation from .txt to .rdoc.
+* Removed setup.rb.
+
 == MIME::Types 1.16
 * Made compatible with Ruby 1.8.6, 1.8.7, and 1.9.1.
 * Switched to the 'hoe' gem system and added a lot of build-time tools.
