--- a/History.rdoc
+++ b/History.rdoc
@@ -1,11 +1,19 @@
 == MIME::Types 1.17 / 2011-MM-DD
-* Implemented modern 'hoe' semantics.
-* Switched to minitest instead of test/unit.
-* Converted documentation from .txt to .rdoc.
-* Removed setup.rb. (Issue #3:
-  https://github.com/halostatue/mime-types/issues/3).
-* Should no longer complain about missing RubyGems keys (Issue #2:
-  https://github.com/halostatue/mime-types/issues/2).
+* Minor Enhancements:
+  * Implemented modern 'hoe' semantics.
+  * Switched to minitest instead of test/unit.
+  * Converted documentation from .txt to .rdoc.
+  * Removed setup.rb. (Issue #3:
+    https://github.com/halostatue/mime-types/issues/3).
+  * Should no longer complain about missing RubyGems keys (Issue #2:
+    https://github.com/halostatue/mime-types/issues/2).
+  * Added .mp4 and .mpg4 as recognized extensions for
+    {application,audio,video}/mp4 per RFC4337. (Issue #1:
+    https://github.com/halostatue/mime-types/issues/1).
+  * Added audio/x-aac and .aac per RubyForge issue #28054
+    (http://rubyforge.org/tracker/index.php?func=detail&aid=28054&group_id=293&atid=1194).
+  * Made it much easier to update MIME types from this point forward.
+  * Updated MIME types from IANA.
 
 == MIME::Types 1.16
 * Made compatible with Ruby 1.8.6, 1.8.7, and 1.9.1.
