--- a/README.rdoc
+++ b/README.rdoc
@@ -8,11 +8,11 @@ rdoc :: http://mime-types.rubyforge.org/
 == Description
 
 This library allows for the identification of a file's likely MIME content
-type. This is release 1.17.2. The identification of MIME content type is based
-on a file's filename extensions.
+type. This is release 1.19 with new MIME types. The identification of MIME
+content type is based on a file's filename extensions.
 
-MIME::Types for Ruby originally based on and synchronized with MIME::Types for
-Perl by Mark Overmeer, copyright 2001 - 2009. As of version 1.15, the data
+MIME::Types for Ruby was originally based on and synchronized with MIME::Types
+for Perl by Mark Overmeer, copyright 2001 - 2009. As of version 1.15, the data
 format for the MIME::Type list has changed and the synchronization will no
 longer happen.
 
