--- a/Licence.rdoc
+++ b/Licence.rdoc
@@ -1,12 +1,37 @@
 == Licence
 
-This software is available under a triple disjunctive licence:
-{Ruby's licence}[http://www.ruby-lang.org/en/LICENSE.txt],
-the
-{Perl Artistic licence}[http://www.perl.com/pub/a/language/misc/Artistic.html],
-or the {GNU GPL version 2}[http://www.gnu.org/licenses/old-licenses/gpl-2.0.html]
-(or at your option, any later verison).
+This software is available under three licenses: the GNU GPL version 2 (or at
+your option, a later version), the Perl Artistic license, or the MIT license.
+Note that my preference for licensing is the MIT license, but the original Perl
+MIME::Types was dually originally licensed with the Perl Artistic and the GNU
+GPL ("the same terms as Perl itself") and given that the Ruby implementation
+hewed pretty closely to the Perl version, I must maintain the additional
+licensing terms.
 
-If you do not accept one of these licences, you may not use this software.
+* Copyright 2003–2013 Austin Ziegler.
+* Adapted from MIME::Types (Perl) by Mark Overmeer.
 
-* Copyright 2003–2012 Austin Ziegler.
+=== MIT License
+
+this software and associated documentation files (the "Software"), to deal in
+the Software without restriction, including without limitation the rights to
+use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
+of the Software, and to permit persons to whom the Software is furnished to do
+so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+=== Perl Artistic License (version 2)
+See the file docs/artistic.txt in the main distribution.
+
+=== GNU GPL version 2
+See the file docs/COPYING.txt in the main distribution.
