--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,10 @@
+== 1.24 / YYYY-MM-DD
+
+* Code Climate:
+  * Working on improving the quality of the mime-types codebase through the use
+    of Code Climate. https://codeclimate.com/github/halostatue/mime-types
+  * Simplified MIME::Type.from_array to make more assumptions about assignment.
+
 == 1.23 / 2013-04-20
 
 * New Feature:
