--- a/Contributing.rdoc
+++ b/Contributing.rdoc
@@ -42,13 +42,13 @@ will do.
 Here's the most direct way to get your work merged into the project:
 
 * Fork the project.
-* Clone down your fork (+git clone git://github.com/<username>/diff-lcs.git+).
+* Clone down your fork (+git clone git://github.com/<username>/mime-types.git+).
 * Create a topic branch to contain your change (+git checkout -b my\_awesome\_feature+).
 * Hack away, add tests. Not necessarily in that order.
 * Make sure everything still passes by running `rake`.
 * If necessary, rebase your commits into logical chunks, without errors.
 * Push the branch up (+git push origin my\_awesome\_feature+).
-* Create a pull request against halostatue/diff-lcs and describe what your
+* Create a pull request against halostatue/mime-types and describe what your
   change does and the why you think it should be merged.
 
 === Contributors
