Documenting caching for 1.25 release.
- Fixing some issues with loading the cache container.
- Fixing some issues with the run of tests in a particular order.
- Modernized Minitest usage.

--- a/Contributing.rdoc
+++ b/Contributing.rdoc
@@ -57,12 +57,13 @@ Here's the most direct way to get your work merged into the project:
 
 Thanks to everyone else who has contributed to MIME::Types:
 
-*  Andre Pankratz
-*  Mauricio Linhares
-*  Richard Hirner
-*  Todd Carrico
-*  Garret Alfert
-*  Hans de Graaff
-*  Henrik Hodne
-*  Martin d'Allens
-*  cgat
+* Andre Pankratz
+* Mauricio Linhares
+* Richard Hirner
+* Todd Carrico
+* Garret Alfert
+* Hans de Graaff
+* Henrik Hodne
+* Martin d'Allens
+* cgat
+* Greg Brockman
