--- a/README.rdoc
+++ b/README.rdoc
@@ -10,8 +10,34 @@ continuous integration :: {<img src="https://travis-ci.org/halostatue/mime-types
 == Description
 
 This library allows for the identification of a file's likely MIME content
-type. This is release 1.24, adding and updating a few MIME types and fixing
-some issues with documentation.
+type. This is release 1.25, adding experimental caching and lazy loading
+functionality.
+
+The caching and lazy loading features were initially implemented by Greg
+Brockman (gdb). As these features are experimental, they are disabled by
+default and must be enabled through the use of environment variables. The cache
+is invalidated on a per-version basis; the cache for version 1.25 will not be
+reused for version 1.26.
+
+To use lazy loading, set the environment variable +RUBY_MIME_TYPES_LAZY_LOAD+
+to any value other than 'false'. When using lazy loading, the initial startup
+of MIME::Types is around 12–25× faster than normal startup (on my system,
+normal startup is about 90 ms; lazy startup is about 4 ms). This isn't
+generally useful, however, as the MIME::Types database has not been loaded.
+Lazy startup and load is just *slightly* faster—around 1 ms. The real advantage
+comes from using the cache.
+
+To enable the cache, set the environment variable +RUBY_MIME_TYPES_CACHE+ to a
+filename where MIME::Types will have read-write access. The first time a new
+version of MIME::Types is run using this file, it will be created, taking a
+little longer than normal. Subsequent loads using the same cache file will be
+approximately 3½× faster (25 ms) than normal loads. This can be combined with
++RUBY_MIME_TYPES_LAZY_LOAD+, but this is *not* recommended in a multithreaded
+or multiprocess environment where all threads or processes will be using the
+same cache file.
+
+As the caching interface is still experimental, the only values cached are the
+default MIME::Types database, not any custom MIME::Types added by users.
 
 MIME types are used in MIME-compliant communications, as in e-mail or HTTP
 traffic, to indicate the type of content which is transmitted. MIME::Types
